# ferrisup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.simple.md  add_import.sh  add_workspace_deps.patch  build.rs  env.sample  fix_component_imports.sh  fix_imports.rs  fix_imports.sh  fix_imports_code.txt  fix_indentation.sh  fix_nesting.sh  fix_shared_component.rs  fix_transform.patch  fixed_make_shared.rs  insert_workspace_deps.sh  remove_unused_function.sh  replace_function.sh  temp_parquet_generator.rs  test_shared.sh  update_imports.sh  update_make_shared.rs  update_transform.sh  workspace_deps.rs  workspace_deps_insert.rs
cli/templates/edge/: Cargo.toml  lib.rs  lib.rs.cloudflare_worker  lib.rs.minimal_binary  lib.rs.wasm32_wasi
cli/templates/edge/api-function/aws-lambda-edge/: template.yaml
cli/templates/edge/api-function/cloudflare-workers/: build.sh  docker-compose.yml  stop.sh  template.json
cli/templates/edge/api-function/fastly/: README.md  build.sh  docker-compose.yml  template.json
cli/templates/edge/api-function/vercel-edge/: Cargo.toml  lib.rs
cli/templates/edge/static-site/cloudflare/: wrangler.toml
cli/templates/edge/static-site/netlify/: lib.rs
cli/templates/edge/static-site/vercel/: lib.rs  template.json
cli/templates/edge/web-component/browser/: lib.rs
cli/templates/edge/web-component/nodejs/: Cargo.toml
client/: Cargo.toml  Dioxus.toml  Trunk.toml  package-lock.json  package.json  tailwind.config.js
client/assets/: main.css  tailwind.css
client/public/: CNAME
client/src/: components.rs  main.rs
client/src/components/: buttons.rs  community.rs  cta.rs  feature_card.rs  features.rs  footer.rs  hero.rs  home.rs  lazy_sections.rs  mod.rs
ferrisup/: CHANGELOG.md  Cargo.toml  README.md  cleanup.sh  ferrisup.sh  test_shared.sh
ferrisup/docs/: ARCHITECTURE.md  CONTRIBUTING_PROJECTS.md  EMBEDDED_TEMPLATE_REFACTORING.md  MIGRATION_PLAN.md  TEMPLATE_AUTHORING_GUIDE.md  WORKSPACE_ORGANIZATION.md
ferrisup/src/: lib.rs  main.rs
ferrisup/src/commands/: component.rs  dependency.rs  import_fixer.rs  mod.rs  new.rs  new_with_handlers.rs  preview.rs  scale.rs  test_mode.rs  transform.rs  unused_features.rs  workspace.rs
ferrisup/src/commands/frameworks/: mod.rs
ferrisup/src/commands/transform/: component.rs  constants.rs  mod.rs  project_structure.rs  ui.rs  utils.rs  workspace.rs  workspace_utils.rs
ferrisup/src/commands/transform/backup/: utils.rs
ferrisup/src/config/: mod.rs
ferrisup/src/project/handlers/: cli.rs  mod.rs  template.rs  traits.rs
ferrisup/src/project/templates/: manager.rs  mod.rs  renderer.rs  variables.rs
ferrisup/src/project_handlers/: mod.rs  template_handler.rs
ferrisup/src/template_manager/: mod.rs
ferrisup/src/templates/: utils.rs
ferrisup/src/utils/: mod.rs
ferrisup/templates/client/leptos/: setup.sh  template.json
ferrisup/templates/client/leptos/counter/: Cargo.toml  README.md
ferrisup/templates/client/leptos/router/: Cargo.toml  README.md
ferrisup/templates/client/leptos/todo/: Cargo.toml
ferrisup/templates/data-science/: analysis.rs
ferrisup/templates/data-science/linfa-examples/: Cargo.toml.template
ferrisup/templates/data-science/linfa-examples/data/: sample_regression.csv
ferrisup/templates/data-science/linfa-examples/src/: decision_tree.rs
ferrisup/templates/data-science/linfa-image-recognition/: Cargo.toml.template
ferrisup/templates/data-science/linfa-image-recognition/src/: main.rs
ferrisup/templates/data-science/linfa-lab/: README.md  template.json
ferrisup/templates/data-science/polars-cli/: Cargo.toml.csv.template  Cargo.toml.json.template  Cargo.toml.parquet.template  Cargo.toml.template  example_data_csv.csv  next_steps_parquet.json  pre_gen_hook.sh  select_template.sh  template_json.json
ferrisup/templates/data-science/polars-cli/data/: generate_sample.rs  generate_sample_parquet.py
ferrisup/templates/edge/: template.json.new
ferrisup/templates/edge/api-function/fastly/: dev.sh
ferrisup/templates/edge/tests/: web.rs
ferrisup/templates/embedded/: Cargo.toml.template
ferrisup/templates/full-stack/: README.md  template.json
ferrisup/templates/minimal/: README.md
ferrisup/templates/ml-pipeline/: README.md  template.json
ferrisup/templates/server/actix/: Cargo.toml.template
ferrisup/templates/server/axum/: Cargo.toml.template
ferrisup/templates/server/poem/: Cargo.toml.template
ferrisup/templates/serverless/: Cargo.toml.template  README.md.template  main.rs.template
ferrisup/templates/serverless/aws/: Cargo.toml.template
ferrisup/templates/serverless/azure/: Cargo.toml.template
ferrisup/tests/: commands_test.rs  main_test.rs  transform_test.rs  utils_test.rs
ferrisup/tests/common/: mod.rs
ferrisup_common/: Cargo.toml  README.md
ferrisup_common/src/: cargo.rs  fs.rs  lib.rs
shared/: Cargo.toml  README.md
shared/src/: cargo.rs  fs.rs  lib.rs
site/: Cargo.toml
templates/client/leptos/router/: Cargo.toml  index.html  style.css  template.json
templates/client/leptos/todo/: Cargo.toml  index.html  style.css  template.json
templates/data-science/burn-image-classifier/: CUSTOMIZATION.md  Cargo.toml  Cargo.toml.template  README.md  download_cifar10.rs  generate_sample_data.sh  generate_synthetic.rs  setup_dataset.sh  template.json
templates/data-science/burn-image-classifier/examples/: classify.rs  image_classifier.rs
templates/data-science/burn-image-classifier/src/: config.rs  data.rs  error.rs  lib.rs  main.rs  model.rs  tests.rs  training.rs  visualization.rs
templates/data-science/burn-image-recognition/: Cargo.toml  Cargo.toml.template  GETTING_STARTED.md  README.md  download_mnist.sh  download_sample_images.sh  model.mpk  post_generation.sh  template.json
templates/data-science/burn-image-recognition/src/: data.rs  lib.rs  main.rs  model.rs  training.rs
templates/data-science/burn-image-recognition/tests/: smoke.rs
templates/edge/api-function/aws-lambda-edge/: Cargo.toml  README.md  template.json
templates/edge/api-function/fastly/: Cargo.toml  fastly.toml  stop.sh
(+364 files in other folders)
