[package]
name = "ferrisup"
version = "0.1.18"
edition = "2021"
description = "A versatile Rust project bootstrapping tool - start anywhere, scale anywhere"
authors = ["Jitpomi <info@jitpomi.com>"]
license = "MIT"
repository = "https://github.com/Jitpomi/ferrisup"
documentation = "https://github.com/Jitpomi/ferrisup#readme"
readme = "README.md"
homepage = "https://github.com/Jitpomi/ferrisup"
keywords = ["cli", "bootstrap", "template", "project", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
handlebars = "4.5"
colored = "2.0"
dialoguer = "0.11.0"
indicatif = "0.17.8"
console = "0.15"
fs_extra = "1.3"
walkdir = "2.4"
log = "0.4"
env_logger = "0.10"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
tempfile = "3.8"
toml = "0.8"
toml_edit = "0.20"
dirs = "5.0"
chrono = "0.4"

[features]
default = []
workspace_test = []

[profile.release]
opt-level = 3
lto = true
strip = true
