[workspace]
members = [
    "ferrisup"
, "client", "shared"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Common dependencies used across multiple crates
anyhow = "1.0"
colored = "3.0.0"
toml = "0.8.23"
toml_edit = "0.22.27"
walkdir = "2.3"
tempfile = "3.8"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
