[package]
name = "client"
version = "0.2.3"
authors = ["jermsam <ssali@jitpomi.com>"]
edition = "2021"

[package.metadata]

[package.metadata.ferrisup]
component_type = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
dioxus-free-icons = { version = "0.9.0", features = ["font-awesome-brands"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
