[package]
name = "ferrisup"
version = "0.1.23"
edition = "2021"
description = "A versatile Rust project bootstrapping tool - start anywhere, scale anywhere"
authors = ["Jitpomi <info@jitpomi.com>"]
license = "MIT"
repository = "https://github.com/Jitpomi/ferrisup"
documentation = "https://github.com/Jitpomi/ferrisup#readme"
readme = "README.md"
homepage = "https://github.com/Jitpomi/ferrisup"
keywords = ["cli", "bootstrap", "template", "project", "generator"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata]

[package.metadata.ferrisup]
component_type = "binary"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
thiserror = "1.0"
handlebars = "4.5"
colored = { workspace = true }
dialoguer = "0.10.4"
indicatif = "0.17.8"
console = "0.15"
fs_extra = "1.3"
walkdir = { workspace = true }
log = "0.4"
env_logger = "0.10"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = "5.0"
chrono = "0.4"

# For local development and publishing, use a version that exists on crates.io
shared = { path = "../shared", version = "0.1.2" }

[features]
default = []
workspace_test = []

[profile.release]
opt-level = 3
lto = true
strip = true
