[package]
name = "ferrisup-common"
version = "0.2.0"
edition = "2021"
description = "Shared utilities and common functionality for the FerrisUp project"
license = "MIT"
repository = "https://github.com/Jitpomi/ferrisup"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ferrisup_common"
path = "src/lib.rs"

[dependencies]
# Using workspace dependencies
anyhow = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
toml_edit = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
