[package]
name = "shared"
version = "0.1.23"
edition = "2021"
description = "Shared utilities for ferrisup"
license = "MIT"
repository = "https://github.com/ferrisup/ferrisup"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
# Using workspace dependencies
anyhow = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
colored = { workspace = true }
toml_edit = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
