[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
description = "A Rust edge computing application with WebAssembly support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
anyhow = "1.0"

[dev-dependencies]
wasm-pack = "0.12"
wasm-bindgen-test = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
