[package]
name = "burn-mnist"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16", features = ["ndarray", "autodiff", "train"] }
burn-ndarray = "0.16"
burn-autodiff = "0.16"
burn-train = "0.16"
burn-dataset = { version = "0.16", features = ["vision"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
image = "0.24"

[lib]
path = "src/lib.rs"

[[bin]]
name = "burn-mnist"
path = "src/main.rs"
