[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
leptos_router = { version = "0.7.8" }
leptos_meta = { version = "0.7.8" }
console_log = "1.0"
log = "0.4.22"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
