[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.7.8", features = ["csr"] }
console_log = "1.0"
log = "0.4.22"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
uuid = { version = "1.6", features = ["v4", "js", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.70", features = ["Storage", "HtmlInputElement", "HtmlFormElement", "CustomEvent", "CustomEventInit"] }
wasm-bindgen = "0.2.93"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
