[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
description = "A Rust application for AWS Lambda@Edge"

[dependencies]
lambda_http = "0.8"
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
urlencoding = "2.1"

[profile.release]
# Tell `rustc` to optimize for small code size
opt-level = "s"
strip = true
lto = true
codegen-units = 1
