[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0" # Specifying the Rust version for compatibility
description = "A Rust application for Fastly Compute@Edge"
publish = false

[dependencies]
fastly = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Pin specific versions of transitive dependencies for Rust 1.69.0 compatibility
zerofrom = "=0.1.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# Enable the Fastly CLI to automatically generate a local manifest when packaging.
[package.metadata.fastly.local_server]
manifest_version = 2

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
lto = true
codegen-units = 1
