[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"
description = "A Rust WebAssembly Edge Function for Vercel"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Headers",
  "Request",
  "Response",
  "ResponseInit",
  "RequestInit"
]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
urlencoding = "2.1"
console_error_panic_hook = "0.1"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["wee_alloc"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Enable link time optimization
lto = true
