[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true

[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
console_log = "1.0"
log = "0.4.28"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.43"
web-sys = "0.3.77"
